--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>Posts</h1>
+
+<% @posts.each do |post| %>
+  <h3><%= post.title %></h3>
+  <p><%= link_to 'Read More', post_path(post) %></p>
+<% end %>
