--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+<%= if current_user %>
+  <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %>
+  <%= link_to 'Signup', '/signup' %>
+<% end %>
 
 <%= yield %>
 
