Fix password_field typo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
-<%= if current_user %>
+<%= link_to 'Home', root_path %>
+<% if current_user %>
   <%= link_to "Logout", '/logout' %>
 <% else %>
   <%= link_to 'Login', '/login' %>
