--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for :user, url: '/users' do |f| %>
   <%= f.text_field :name, :placeholder => 'Name' %>
   <%= f.email_field :email, :placeholder => 'Email' %>
-  <%= f.password_field :name, :placeholder => 'Password' %>
-  <%= f.password_field :name, :placeholder => 'Password Confirmation' %>
+  <%= f.password_field :password, :placeholder => 'Password' %>
+  <%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %>
   <%= f.submit "Submit" %>
 <% end %>
