--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,12 @@
-<h1>Posts</h1>
+<div class="jumbotron fullwidth-jumbotron">
+  <div class="container">
+    <h1>Posts</h1>
+  </div>
+</div>
 
-<% @posts.each do |post| %>
-  <h3><%= post.title %></h3>
-  <p><%= link_to 'Read More', post_path(post) %></p>
-<% end %>
+<div class="container">
+  <% @posts.each do |post| %>
+    <h3><%= post.title %></h3>
+    <p><%= link_to 'Read More', post_path(post) %></p>
+  <% end %>
+</div>
