Add show page styles

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
-<h1><%= @post.title %></h1>
+<div class="container show-post">
+  <h1><%= @post.title %></h1>
 
-<p><%= @post.body %></p>
+  <p><%= @post.body %></p>
+</div>
