--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -10,11 +10,27 @@ body {
   margin-bottom: 0px;
 }
 
+// index
+
 .fullwidth-jumbotron {
   background: #EE5253;
   padding: 6em 0;
   
   h1 {
     color: #fff;
+  }
+}
+
+// show page
+
+.show-post {
+  h1 {
+    color: #EE5253;
+    font-size: 4em;
+  }
+  
+  p {
+    padding-right: 6em;
+    line-height: 1.7;
   }
 }
