Add bootstrap styles to login and signup forms

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,29 @@
-<h1>SignUp</h1>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <h1 class="text-center">SignUp</h1>
+    <div class="well">
 
-<%= form_for :user, url: '/users' do |f| %>
-  <%= f.text_field :name, :placeholder => 'Name' %>
-  <%= f.email_field :email, :placeholder => 'Email' %>
-  <%= f.password_field :password, :placeholder => 'Password' %>
-  <%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %>
-  <%= f.submit "Submit" %>
-<% end %>
+    <%= form_for :user, url: '/users' do |f| %>
+    
+      <div class="form-group">
+        <%= f.text_field :name, :placeholder => 'Name', class: "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.email_field :email, :placeholder => 'Email', class: "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.password_field :password, :placeholder => 'Password', class: "form-control" %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation', class: "form-control" %>
+      </div>
+    
+      <%= f.submit "Submit", class: "btn btn-success" %>
+    <% end %>
+
+    </div>
+  </div>
+</div>
